style(search): refactor search bar position to use native logical CSS properties to fix overlap in RTL

--- a/src/app/features/home/home-page/home-page.component.scss
+++ b/src/app/features/home/home-page/home-page.component.scss
@@ -39,13 +39,7 @@
     width: 24px;
     height: 24px;
     z-index: 2;
-    
-    [dir='rtl'] & {
-      right: 20px;
-    }
-    [dir='ltr'] & {
-      left: 20px;
-    }
+    inset-inline-start: 20px;
   }
 
   .search-bar-input {
@@ -59,13 +53,8 @@
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.02);
     outline: none;
     transition: all 0.3s ease;
-    
-    [dir='rtl'] & {
-      padding: 15px 56px 15px 100px;
-    }
-    [dir='ltr'] & {
-      padding: 15px 100px 15px 56px;
-    }
+    padding-inline-start: 56px;
+    padding-inline-end: 100px;
     
     &:focus {
       border-color: $primary-color;
@@ -80,13 +69,7 @@
     font-weight: 700;
     z-index: 2;
     height: 42px;
-    
-    [dir='rtl'] & {
-      left: 6px;
-    }
-    [dir='ltr'] & {
-      right: 6px;
-    }
+    inset-inline-end: 6px;
   }
 
   .hero-content {
